--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -63,6 +63,7 @@ nav li{
   background-size: 1200px 700px;
   background-repeat: no-repeat;
   background-position: center;
+  border: 1px solid white;
 }
 
 .mission_statement {
@@ -74,11 +75,13 @@ nav li{
 /*Section: Tea of the Month*/
 .tea_of_the_month {
   position: relative;
-  top: 100px;
+  top: 69px;
   display: flex;
   align-items: center;
   flex-direction: column;
   width: 100%;
+  height: 700px;
+  border: 1px solid white;
 }
 
 .tea_list1 {
@@ -108,62 +111,64 @@ nav li{
 }
 
 /*Section: Locations*/
-.locations {
-  position: relative;
-  top: 100px;
+
+.locations_block {
+  position:relative;
+  top: 69px;
+  height: 500px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 500px;
   background-image: url("../images/img-locations-background.jpg");
-  /*background-size: 1200px 700px;*/
+  background-size: 1200px 700px;
   background-repeat: no-repeat;
   background-position: center;
-  overflow: hidden;
   border: 1px solid white;
 }
 
 .location_content {
   display: flex;
   flex-direction: column;
+  width: 980px;
   justify-content: space-between;
-  height: 330px;
-  width: 1000px;
   background-color: transparent;
 }
 
-.locations_text {
+.locations_title {
+  display: inline-block;
   background-color: transparent;
 }
 
-.three_stores {
+h3 {
+  background-color: transparent;
+}
+
+.list_locations {
   display: flex;
+  height: 300px;
+  widthe: 980px;
   flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  width: 1000px;
-  height: 300px;
+  justify-content: space-between;
   background-color: transparent;
 }
 
-.store {
+.address {
+  height: 300px;
   width: 300px;
-  height: 300px;
-  /*background-color: black;*/
-  border: 1px solid black;
-}
-
-.locations_text {
-  background-color: transparent;
+  text-align: center;
+  background-color: black;
+  opacity: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 
 /*Section: Footer*/
-/*.footer {
+
+.footer {
   position: relative;
-  top: 100px;
+  top: 69px;
   border: 1px solid white;
   width: 100%;
   height: 200px;
@@ -171,7 +176,7 @@ nav li{
 
 .bottom_space {
   position: relative;
-  top: 100px;
+  top: 69px;
   border: 1px solid white;
   width: 100%;
   height: 20px;
@@ -179,9 +184,9 @@ nav li{
 
 .copy_right {
   position: relative;
-  top: 100px;
+  top: 69px;
   border: 1px solid white;
   width: 100%;
-  text-align: left;
+  display: flex;
+  justify-content: flex-start;
 }
-*/
