--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,11 +2,16 @@
 * {
   background-color: black;
   font-family: Helvetica;
-  /*font-size:22px;*/
   font-weight: bold;
   color: seashell;
   opacity: 0.9;
   text-align: center;
+}
+
+p {
+  font-family: Helvetica;
+  font-size: 22px;
+  color: seashell;
 }
 
 /*Section: Header*/
@@ -17,22 +22,25 @@
   position: fixed;
   z-index: 10;
   border-bottom: 1px solid seashell;
+  background-color: black;
+  opacity: 1;
 }
 
 .header_left {
   width: 300px;
-  height: 69px;
+  height: 68px;
   text-align: left;
 }
 
 img.logo {
-  height:50px;
+  height: 50px;
+  position:absolute;
   left: 10px;
 }
 
 .header_right {
   width: 600px;
-  height: 69px;
+  height: 68px;
   display:flex;
   justify-content: flex-end;
 }
@@ -43,6 +51,7 @@ nav {
 
 nav a {
   text-decoration: underline;
+  font-size: 22px;
 }
 
 nav li{
@@ -54,16 +63,15 @@ nav li{
 /*Section: Our Mission*/
 .our_mission {
   position: relative;
-  top: 69px;
+  top: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
-  height:700px;
+  height:800px;
   background-image: url("../images/img-mission-background.jpg");
   background-size: 1200px 700px;
   background-repeat: no-repeat;
   background-position: center;
-  border: 1px solid white;
 }
 
 .mission_statement {
@@ -75,19 +83,19 @@ nav li{
 /*Section: Tea of the Month*/
 .tea_of_the_month {
   position: relative;
-  top: 69px;
+  top: 70px;
   display: flex;
   align-items: center;
   flex-direction: column;
   width: 100%;
   height: 700px;
-  border: 1px solid white;
 }
 
 .tea_list1 {
   display: flex;
   width: 1000px;
   justify-content: space-between;
+  margin-bottom: 20px;
 }
 
 .tea_list2 {
@@ -107,14 +115,20 @@ nav li{
   display: inline-block;
   height: 200px;
   width: 300px;
-  border: 1px solid white;
+  margin-bottom: 10px;
+}
+
+h3.name_of_tea {
+  display: inline-block;
+  padding: 0px;
+  margin: 0px;
 }
 
 /*Section: Locations*/
 
 .locations_block {
   position:relative;
-  top: 69px;
+  top: 70px;
   height: 500px;
   display: flex;
   align-items: center;
@@ -123,24 +137,22 @@ nav li{
   background-size: 1200px 700px;
   background-repeat: no-repeat;
   background-position: center;
-  border: 1px solid white;
 }
 
 .location_content {
-  display: flex;
-  flex-direction: column;
   width: 980px;
-  justify-content: space-between;
   background-color: transparent;
 }
 
-.locations_title {
+h1 {
+  background-color: transparent;
+}
+
+h1.location_title {
   display: inline-block;
   background-color: transparent;
-}
-
-h3 {
-  background-color: transparent;
+  margin: 0px;
+  padding: 0px;
 }
 
 .list_locations {
@@ -150,6 +162,7 @@ h3 {
   flex-direction: row;
   justify-content: space-between;
   background-color: transparent;
+  margin: 15px;
 }
 
 .address {
@@ -168,25 +181,20 @@ h3 {
 
 .footer {
   position: relative;
-  top: 69px;
-  border: 1px solid white;
+  top: 70px;
   width: 100%;
   height: 200px;
 }
 
-.bottom_space {
-  position: relative;
-  top: 69px;
-  border: 1px solid white;
-  width: 100%;
-  height: 20px;
-}
 
 .copy_right {
   position: relative;
-  top: 69px;
-  border: 1px solid white;
+  top: 70px;
   width: 100%;
-  display: flex;
-  justify-content: flex-start;
+  text-align: left;
+}
+
+.copy_right_text {
+  position: absolute;
+  left: 20px;
 }
